--- a/site 2/index.html
+++ b/site 2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LoftHouse</title>
     <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./libs/youtubeLightbox/youtubeLightbox.css" />
   </head>
   <body>
     <header class="header">
@@ -17,14 +18,19 @@
             <nav class="header__nav">
               <nav class="nav">
                 <ul class="nav__list">
-                  <li><a href=""></a>О комплексе</li>
-                  <li><a href=""></a>Район</li>
-                  <li><a href=""></a>Каталог квартир</li>
-                  <li><a href=""></a>Ипотека</li>
-                  <li><a href=""></a>Контакты</li>
+                  <li><a href="">О комплексе</a></li>
+                  <li><a href="">Район</a></li>
+                  <li><a href="">Каталог квартир</a></li>
+                  <li><a href="">Ипотека</a></li>
+                  <li><a href="">Контакт</a>ы</li>
                 </ul>
               </nav>
             </nav>
+            <div class="header__nav-button">
+              <button class="nav-icon-btn">
+                <div class="nav-icon"></div>
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -143,12 +149,13 @@
                 autocomplete="off"
               />
               <input
+                data-tel-input
                 type="text"
                 class="form__input"
                 placeholder="Ваш телефон"
                 autocomplete="off"
               />
-              <p class="form__privacy">
+              <p class="form__privacy form__privacy--bottom">
                 *Мы никому не передаем ваши данные. <br />И не сохраняем ваш
                 номер в базу.
               </p>
@@ -159,6 +166,140 @@
           </div>
         </div>
       </section>
+      <section class="video">
+        <div class="container">
+          <h2 class="visually-hidden">video about</h2>
+          <a
+            href="https://www.youtube.com/watch?v=bhJNL9JUsnY"
+            data-youtubelightbox
+            class="video__link"
+          >
+            <img
+              src="./img/video/play-button.svg"
+              alt=""
+              class="viodeo__icon"
+            />
+            <img src="./img/video/Rectangle 2.jpg" alt="" class="viodeo__img" />
+          </a>
+        </div>
+      </section>
+      <section class="section-map">
+        <div class="container">
+          <div class="section-map__title">
+            <h2 class="title-2">Район на карте</h2>
+          </div>
+          <div class="section-map__map">
+            <div class="map" id="map"></div>
+          </div>
+        </div>
+      </section>
+      <section class="feedback">
+        <div class="container">
+          <div class="feedback__title">
+            <h2 class="title-2">Есть вопросы?</h2>
+          </div>
+          <form class="feedbak__form form">
+            <p class="form__privacy form__privacy--bottom">
+              *Мы никому не передаем ваши данные. <br />И не сохраняем ваш номер
+              в базу.
+            </p>
+            <input
+              type="text"
+              class="form__input"
+              placeholder="Ваше имя"
+              autocomplete="off"
+            />
+            <input
+              data-tel-input
+              type="text"
+              class="form__input"
+              placeholder="Ваш телефон"
+              autocomplete="off"
+            />
+
+            <button type="submit" class="form__button">Посмотреть район</button>
+          </form>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__row">
+          <div class="footer__logo">
+            <a href="#!">
+              <img src="./img/logo.svg" alt="Loft House" />
+            </a>
+          </div>
+          <div class="footer__nav">
+            <nav>
+              <ul class="footer__nav-list">
+                <li><a href="">О комплексе</a></li>
+                <li><a href="">Район</a></li>
+                <li><a href="">Каталог квартир</a></li>
+                <li><a href="">Ипотека</a></li>
+                <li><a href="">Контакты</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__nav">
+            <nav>
+              <ul class="footer__nav-list">
+                <li><a href="">Поселение и переезд</a></li>
+                <li><a href="">Сервисные услуги</a></li>
+                <li><a href="">Экологическая устойчивость</a></li>
+                <li><a href="">Инвестиционные возможности</a></li>
+                <li><a href="">Программа лояльности</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__adress">
+            <ul class="footer__nav-list">
+              <li>Адрес: Наб. реки Фонтанки 10-15</li>
+              <li>Телефон:<a href="tel:+88121234567"> 8 (812) 123-45-67</a></li>
+              <li>Отдел продаж: 10:00 - 20:00</li>
+              <li>
+                E-mail:
+                <a class="link-bold" href="mailto:vip@lofthouse.ru"
+                  >vip@lofthouse.ru</a
+                >
+              </li>
+            </ul>
+            <ul class="footer__socials">
+              <li>
+                <a href="#"><img src="./img/socials/youtube.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/socials/vk.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/socials/facebook.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/socials/instagram.svg" alt="" /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- youtube lightbox ------------------- -->
+
+    <div id="youtubelightbox" class="youtubelightbox">
+      <div class="youtubelightbox__centeredchild">
+        <div class="youtubelightbox__videowrapper">
+          <div class="youtubelightboxPlayer"></div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://api-maps.yandex.ru/2.1/?apikey=e8d93d16-5b22-489b-b92d-c5485ce3380e&lang=ru_RU"
+      type="text/javascript"
+    ></script>
+    <script src="./libs/phoneMask/mask.js"></script>
+    <script src="./libs/phoneMask/mask_list.js"></script>
+    <script src="./libs/youtubeLightbox/youtubeLightbox.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
